@@ -5,7 +5,7 @@
   <string id="30000">Connection</string>
   <string id="30001">IP Adress</string>
   <string id="30002">Port</string>
-  <string id="30003">Add new links direct to downloads</string>
+  <string id="30003">Add new links directly to downloads</string>
   <string id="30004">No</string>
   <string id="30005">Yes</string>
   <string id="30006">Start downloading after adding new links</string>
@@ -14,6 +14,8 @@
   <string id="30009">Hostname</string>
   <string id="30010">Fall back connection</string>
   <string id="30011">Enable fall back connection</string>
+  <string id="30012">Enable auto refresh</string>
+  <string id="30013">Refresh interval</string>
   
   <string id="30020">Files</string>
   <string id="30021">Default Path</string>
@@ -33,8 +35,8 @@
   <string id="30055">Limit</string>
   <string id="30056">Finished Packages</string>
   <string id="30057">Auto-Restart after Update?</string>
-  <string id="30058"></string>
-  <string id="30059"></string>
+  <string id="30058">Packages:</string>
+  <string id="30059">Files:</string>
   
   <string id="30060">Start</string>
   <string id="30061">Stop</string>
